# power-platform-source-control

./: .dockerignore  .env  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  cli.py  converters.py  development.md  pbivcs.py  pbivcs.spec  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-package.yml
docker/: Dockerfile  docker-compose.yaml
src/powerbi_vcs/: __init__.py  __main__.py  converters.py  pbivcs.py  version.py
tests/: conftest.py  test_module.py
