[tool.poetry]
name = "powerbi-vcs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ConfigArgParse = "^1.5.1"
lxml = "^4.6.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.3"
black = "^21.6b0"
pylama = "^7.7.1"
tox-poetry-installer = { extras=["poetry"], version="^0.8.1" }
pytest = "^6.2.4"
pyexpect = "^1.0.21"
twine = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
