[tool.poetry]
name = "powerbi-vcs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ConfigArgParse = "^1.5.3"
lxml = "^4.9.1"
loguru = "^0.6.0"
configargparse = "^1.5.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"
black = "^22.10.0"
pylama = "^8.4.1"
tox-poetry-installer = { extras=["poetry"], version="^0.10.0" }
pytest = "^7.2.0"
pyexpect = "^1.0.21"
twine = "^4.0.1"
poetryup = "^0.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
